adde feedforward and convnet

--- a/5- Gradient Descent with Autograd/5- Gradient_Descent_and _Autograd.ipynb
+++ b/5- Gradient Descent with Autograd/5- Gradient_Descent_and _Autograd.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +65,23 @@
     "# Consider an example in which the optimal weight for the 'x' variable is 2.\n",
     "x=np.array([1,2,3,4],dtype=np.float32)\n",
     "y=np.array([2,4,6,8],dtype=np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=np.array([1,2,3,4],dtype=np.float32)\n",
+    "y=np.array([2,4,6,8],dtype=np.float32)\n",
+    "w=0.0\n",
+    "def forward(x):\n",
+    "    return w*x\n",
+    "\n",
+    "def loss_(y_t,y_p):\n",
+    "    return ((y_t- y_p)**2).mean\n",
+    "\n"
    ]
   },
   {
@@ -315,16 +332,24 @@
    "source": [
     "<h1>Case #3: All operations, except the prediction, are performed manually.</h1>\n",
     "\n",
-    "<h3 span style='color:yellow'>\"Replace the manually calculated loss and parameter updates with those computed using the loss and optimizer classes in PyTorch.</h3>\n",
+    "<h3 span style='color:yellow'>Replace the manually calculated loss and parameter updates with those computed using the loss and optimizer classes in PyTorch.</h3>\n",
     "\n",
     "<h3 span style='color:yellow'>Pytorch training Pipeline:</h3>\n",
     "<ul>\n",
-    "<li ><span style=\"color:yellow\">Importing libraries.</span></li>\n",
-    "<li><span style=\"color:yellow\">Design the model by specifying the number of inputs and outputs, and by crafting the forward pass with various operations and layers: Design the model (inputs, outputs, forward pass).</span></li>\n",
-    "<li><span style=\"color:yellow\">Construct loss and optimizer.</span></li>\n",
-    "<li><span style=\"color:yellow\">Implement the training loop which includes conducting a forward pass to compute the prediction, carrying out a backward pass to compute the gradients, and continually updating the weights until convergence is achieved.</span></li>\n",
-    "</ul>\n",
-    "</ul>\n"
+    "<li style=\"color:yellow;\"><span style=\"font-size:18px;\">Importing libraries.</span></li>\n",
+    "<li style=\"color:yellow;\"><span style=\"font-size:18px;\">Design the model by specifying the number of inputs and outputs, and by crafting the forward pass with various operations and layers: Design the model (inputs, outputs, forward pass).</span></li>\n",
+    "<li style=\"color:yellow;\"><span style=\"font-size:18px;\">Construct loss and optimizer.</span></li>\n",
+    "<li style=\"color:yellow; font-size:18px;\">Implement the training loop:</li>\n",
+    "  <ul>\n",
+    "  <li style=\"color:yellow;\"><span style=\"font-size:18px;\">Initialization: Start with initial guesses for weights.</span></li>\n",
+    "  <li style=\"color:yellow;\"><span style=\"font-size:18px;\">Forward pass: Compute the predicted outputs by passing the inputs through the model.</span></li>\n",
+    "  <li style=\"color:yellow;\"><span style=\"font-size:18px;\">Compute Loss: Evaluate the error of the predicted output against the actual output using the loss function.</span></li>\n",
+    "  <li style=\"color:yellow;\"><span style=\"font-size:18px;\">Backward pass (Backpropagation): Compute the gradients of the loss with respect to the model parameters.</span></li>\n",
+    "  <li style=\"color:yellow;\"><span style=\"font-size:18px;\">Update weights: Adjust the model parameters (weights and biases) using a predetermined optimization algorithm like Stochastic Gradient Descent (SGD) or Adam.</span></li>\n",
+    "  <li style=\"color:yellow;\"><span style=\"font-size:18px;\">Evaluate: Periodically check the model performance on the validation set.</span></li>\n",
+    "  <li style=\"color:yellow;\"><span style=\"font-size:18px;\">Repeat: Until the performance on the validation set stops improving or after a fixed number of iterations.</span></li>\n",
+    "  </ul>\n",
+    "</ul>"
    ]
   },
   {
@@ -547,6 +572,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
    "outputs": [
@@ -561,7 +593,7 @@
     }
    ],
    "source": [
-    "print(f'The prediction before training: {model(data_test)}')\n"
+    "print(f'The prediction after training: {model(data_test)}')\n"
    ]
   },
   {
@@ -639,6 +671,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
    "outputs": [
@@ -653,7 +692,7 @@
     }
    ],
    "source": [
-    "print(f'The prediction before training: {model(data_test)}')\n"
+    "print(f'The prediction after training: {model(data_test)}')\n"
    ]
   },
   {
