--- a/2- Tensorbasic/2- Tensorbasic.ipynb
+++ b/2- Tensorbasic/2- Tensorbasic.ipynb
@@ -30,24 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-4.0514e+32])\n",
-      "tensor([-4.0514e+32,  4.5601e-41, -4.0514e+32])\n",
-      "tensor([[2.0622e+00, 0.0000e+00, 1.6596e+00],\n",
+      "tensor([1.6590e-24])\n",
+      "tensor([0.0000e+00, 6.7262e-44, 1.0563e-05])\n",
+      "tensor([[1.4727e-34, 0.0000e+00, 1.6598e-37],\n",
+      "        [0.0000e+00, 8.9683e-44, 0.0000e+00]])\n",
+      "tensor([[1.4610e-34, 0.0000e+00, 1.6649e-37],\n",
       "        [0.0000e+00, 4.4842e-44, 0.0000e+00]])\n",
-      "tensor([[-4.0514e+32,  4.5601e-41,  1.6172e+00],\n",
-      "        [ 0.0000e+00,  4.4842e-44,  0.0000e+00]])\n",
-      "tensor([[[-4.0514e+32,  4.5601e-41,  5.8618e-17],\n",
-      "         [ 0.0000e+00,  4.4842e-44,  0.0000e+00]],\n",
+      "tensor([[[1.4903e-34, 0.0000e+00, 1.6590e-24],\n",
+      "         [4.5758e-41, 8.9683e-44, 0.0000e+00]],\n",
       "\n",
-      "        [[ 1.5695e-43,  0.0000e+00,  5.8618e-17],\n",
-      "         [ 0.0000e+00,  2.7340e+20,  6.8589e+22]]])\n"
+      "        [[1.1210e-43, 0.0000e+00, 0.0000e+00],\n",
+      "         [0.0000e+00, 0.0000e+00, 0.0000e+00]]])\n"
      ]
     }
    ],
@@ -76,16 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.9806, 0.8670, 0.6571],\n",
-      "        [0.2288, 0.4661, 0.8821],\n",
-      "        [0.2974, 0.4568, 0.5876]])\n"
+      "tensor([[0.5900, 0.3172, 0.0128],\n",
+      "        [0.6074, 0.6437, 0.7279],\n",
+      "        [0.8216, 0.2308, 0.4287]])\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -311,9 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1548, 0.0867, 0.3322],\n",
+      "        [0.7407, 0.8050, 0.4341],\n",
+      "        [0.6616, 0.0183, 0.0089]])\n"
+     ]
+    }
+   ],
    "source": [
     "# Construct a tensor form uniform distribution\n",
     "x=torch.rand(3,3)\n",
@@ -517,6 +527,9 @@
     "Dot Product: The dot product of two vectors b (often represented as \n",
     "a⋅b) is a scalar (a single number) obtained by multiplying the corresponding entries of the two vectors and then summing those products.\n",
     "Matrix Multiplication: Matrix multiplication involves taking the dot products of rows of the first matrix with the columns of the second matrix. \n",
+    "\n",
+    "In general, matrix multiplication can be seen as an extension of the dot product concept,\n",
+    "transitioning from operations between vectors to operations between matrices\n",
     "'''\n",
     "z=torch.mm(x,y)  \n",
     "print(z)\n",
@@ -626,7 +639,7 @@
     }
    ],
    "source": [
-    "# Batch matrix multiplication: will have three dimensions and teh first dimension will be the batch size\n",
+    "# Batch matrix multiplication: will have three dimensions and the first dimension will be the batch size\n",
     "\n",
     "batch=32\n",
     "m=10\n",
@@ -711,14 +724,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([True, True, True, True, True])\n",
+      "tensor([[False, False, False],\n",
+      "        [ True,  True, False],\n",
+      "        [ True, False, False]])\n",
       "\n",
       "tensor([False, False, False,  True,  True])\n",
       "\n",
@@ -736,7 +751,7 @@
     "y=torch.tensor([6,7,2,4,5])\n",
     "print(x.eq(y)) # element wise comparison\n",
     "print(\"\")\n",
-    "print(torch.eq(x,y)) # element wise comparison\n"
+    "print(torch.eq(x,y)) # element wise comparison"
    ]
   },
   {
@@ -836,7 +851,7 @@
     }
    ],
    "source": [
-    "# Slicing operation\n",
+    "# Slicing and indexing operation\n",
     "x=torch.rand(5,3)\n",
     "print(x)\n",
     "print(\" \")\n",
@@ -853,6 +868,150 @@
     "# Unpacking the value of a tensor of one item of one tensor\n",
     "print(x[1,2].item())\n",
     "# The above method is used with a tensor of one item only to be converted into python scalar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.8301, 0.9952, 0.6584, 0.9640, 0.6179, 0.6423, 0.7284, 0.2951, 0.8792,\n",
+      "        0.1873, 0.8834, 0.4428, 0.6125, 0.9796, 0.7261, 0.0301, 0.3052, 0.6889,\n",
+      "        0.5245, 0.5986])\n",
+      "\n",
+      "torch.Size([20])\n",
+      "\n",
+      "tensor([0.8301, 0.2297, 0.2424, 0.1125, 0.8853, 0.4135, 0.9356, 0.3309, 0.8056,\n",
+      "        0.1464, 0.8970, 0.6053, 0.4129, 0.9959, 0.3379])\n",
+      "\n",
+      "tensor([9.9990e+03, 9.9521e-01, 6.5839e-01, 9.6399e-01, 6.1795e-01, 6.4226e-01,\n",
+      "        7.2838e-01, 2.9513e-01, 8.7923e-01, 1.8730e-01, 8.8343e-01, 4.4280e-01,\n",
+      "        6.1246e-01, 9.7959e-01, 7.2606e-01, 3.0144e-02, 3.0516e-01, 6.8890e-01,\n",
+      "        5.2452e-01, 5.9855e-01])\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size=15\n",
+    "features=20\n",
+    "x=torch.rand(batch_size,features)\n",
+    "# To show the first sample of the batch\n",
+    "print(x[0]) # = x[0,:]\n",
+    "print(\"\")\n",
+    "\n",
+    "# To show the shape of the first sample of the batch\n",
+    "print(x[0].shape)\n",
+    "print(\"\")\n",
+    "# To see the first feature over all samples\n",
+    "print(x[:,0])\n",
+    "print(\"\")\n",
+    "# Feature value update\n",
+    "x[0,0]=9999\n",
+    "print(x[0,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([2, 4, 6, 8])\n",
+      "\n",
+      "tensor([0.3885, 0.3524, 0.9628])\n",
+      "\n",
+      "tensor([ 0,  1, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19])\n",
+      "\n",
+      "tensor([], dtype=torch.int64)\n",
+      " \n",
+      "tensor([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fancy indexing\n",
+    "x=torch.arange(15)\n",
+    "idxs=[2,4,6,8]\n",
+    "print(x[idxs])\n",
+    "print(\"\")\n",
+    "\n",
+    "x=torch.rand(10,10)\n",
+    "rows= torch.tensor([1,2,3])\n",
+    "columns=torch.tensor([1,5,3])\n",
+    "print(x[rows,columns])\n",
+    "print(\"\")\n",
+    "\n",
+    "# Advanced Indexing\n",
+    "x=torch.arange(20)\n",
+    "print(x[(x<2) | (x>9)]) # pick values that  < 2 OR > 9\n",
+    "print(\"\")\n",
+    "\n",
+    "print(x[(x<2) & (x>9)]) # pick values that  < 2 AND > 9\n",
+    "print(\" \")\n",
+    "\n",
+    "# Modulos sclicing\n",
+    "print(x[x.remainder(2)==0])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 0.0000,  0.5000,  1.0000,  1.5000,  2.0000,  2.5000,  3.0000,  7.0000,\n",
+      "         8.0000,  9.0000, 10.0000, 11.0000, 12.0000, 13.0000, 14.0000, 15.0000,\n",
+      "        16.0000, 17.0000, 18.0000, 19.0000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  The 'where' operation is used to verify the value and update the value if a condition is met\n",
+    "x=torch.arange(20)\n",
+    "print(torch.where(x>6,x,x/2)) # if x>6 then x else x/2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0, 1, 2, 3, 4, 5, 6])\n",
+      "\n",
+      "3\n",
+      "\n",
+      "75\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unique operation\n",
+    "x=torch.tensor([0,1,2,3,4,4,5,5,6,0,1,2])\n",
+    "print(x.unique())\n",
+    "print(\"\")\n",
+    "\n",
+    "# ndimension\n",
+    "x=torch.rand((5,3,5))\n",
+    "print(x.ndimension())\n",
+    "print(\"\")\n",
+    "\n",
+    "# Counting the number of elements in a tensor (useful to check how many weighs parameters in a neural network)\n",
+    "print(x.numel())"
    ]
   },
   {
@@ -911,18 +1070,18 @@
    ],
    "source": [
     "# Checking all elements of a tensor are  less than a value (e.g 0) and fill them to 0 ( if you set min=0.3 then all nums <0.3 will be filled with 0.3) will be filled with 0.3) \n",
-    "z=torch.clamp(x,min=0)\n",
+    "z=torch.clamp(x,min=0)  # The same for max\n",
     "print(z)\n",
     "print(\"\")\n",
     "\n",
     "z=torch.clamp(x,min=0.2)\n",
     "print(z)\n",
-    "print(\"\")"
+    "print(\"\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -947,30 +1106,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.9241, 0.3915, 0.3164, 0.2593],\n",
-      "        [0.1752, 0.4162, 0.0398, 0.7481],\n",
-      "        [0.9380, 0.2594, 0.7280, 0.0851],\n",
-      "        [0.6097, 0.9400, 0.7184, 0.8456]])\n",
+      "tensor([[0.1047, 0.5071, 0.0542, 0.3330],\n",
+      "        [0.8789, 0.9451, 0.8701, 0.3063],\n",
+      "        [0.7993, 0.7721, 0.3849, 0.9517],\n",
+      "        [0.4460, 0.6858, 0.4334, 0.4663]])\n",
       " \n",
-      "tensor([0.9241, 0.3915, 0.3164, 0.2593, 0.1752, 0.4162, 0.0398, 0.7481, 0.9380,\n",
-      "        0.2594, 0.7280, 0.0851, 0.6097, 0.9400, 0.7184, 0.8456])\n",
+      "tensor([0.1047, 0.5071, 0.0542, 0.3330, 0.8789, 0.9451, 0.8701, 0.3063, 0.7993,\n",
+      "        0.7721, 0.3849, 0.9517, 0.4460, 0.6858, 0.4334, 0.4663])\n",
       " \n",
-      "tensor([[0.7392, 0.8282],\n",
-      "        [0.7864, 0.1779],\n",
-      "        [0.3874, 0.4246],\n",
-      "        [0.5933, 0.3213],\n",
-      "        [0.7418, 0.4424],\n",
-      "        [0.8600, 0.4696],\n",
-      "        [0.4687, 0.4312],\n",
-      "        [0.0561, 0.2449],\n",
-      "        [0.5461, 0.3221]])\n"
+      "tensor([[0.4649, 0.7464],\n",
+      "        [0.4141, 0.8326],\n",
+      "        [0.0027, 0.7936],\n",
+      "        [0.4572, 0.6388],\n",
+      "        [0.8123, 0.3690],\n",
+      "        [0.0588, 0.7176],\n",
+      "        [0.6422, 0.4016],\n",
+      "        [0.5986, 0.0438],\n",
+      "        [0.8627, 0.5596]])\n",
+      " \n",
+      "tensor([[ 0,  1,  2,  3,  4],\n",
+      "        [ 5,  6,  7,  8,  9],\n",
+      "        [10, 11, 12, 13, 14],\n",
+      "        [15, 16, 17, 18, 19],\n",
+      "        [20, 21, 22, 23, 24]])\n"
      ]
     }
    ],
@@ -984,21 +1149,73 @@
     "print(\" \")\n",
     "\n",
     "x=torch.rand(18)\n",
-    "y=x.view(9,2)\n",
+    "y=x.view(9,2)  \n",
+    "print(y)\n",
+    "print(\" \")\n",
+    "\n",
+    "# reshape is used to reshape a tensor also. The 'view' is used more often and with contiguous memory (adjacent and in sequential order)\n",
+    "x=torch.arange(25)\n",
+    "y=x.reshape(5,5)\n",
     "print(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.7152, 0.4581, 0.2520, 0.7003, 0.2104, 0.8307, 0.9998, 0.4327, 0.7307],\n",
-      "        [0.6956, 0.2398, 0.3148, 0.8643, 0.9919, 0.2183, 0.1639, 0.0801, 0.6860]])\n"
+      "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8])\n",
+      "tensor([[0, 1, 2],\n",
+      "        [3, 4, 5],\n",
+      "        [6, 7, 8]])\n",
+      "tensor([[0, 1, 2],\n",
+      "        [3, 4, 5],\n",
+      "        [6, 7, 8]])\n",
+      "\n",
+      "tensor([[0, 3, 6],\n",
+      "        [1, 4, 7],\n",
+      "        [2, 5, 8]])\n",
+      "\n",
+      "tensor([0, 3, 6, 1, 4, 7, 2, 5, 8])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=torch.arange(9) # Contiguous (adjacent) memory involves ordered and adjacent values stored in memory\n",
+    "print(x) \n",
+    "y=x.view(3,3)\n",
+    "print(y)\n",
+    "\n",
+    "print(y)\n",
+    "print(\"\")\n",
+    "\n",
+    "# apply transpose\n",
+    "y_=y.t()      # Non contiguous memory involves ordered and non adjacent values stored in memory\n",
+    "print(y_)\n",
+    "print(\"\")\n",
+    "#print(y_.view(9)) # This will give an error because the memory is not contiguous\n",
+    "# To reshap it \n",
+    "print(y_.contiguous().view(9)) # This will work because the memory is contiguous now\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.2328, 0.2444, 0.0055, 0.4042, 0.1343, 0.2987, 0.7968, 0.9876, 0.2291],\n",
+      "        [0.1968, 0.5056, 0.1688, 0.6687, 0.9624, 0.8983, 0.1265, 0.8305, 0.8529]])\n",
+      "\n",
+      "torch.Size([16, 200])\n"
      ]
     }
    ],
@@ -1006,7 +1223,138 @@
     "# If you do not want to specify the first shape arguments (# rows), then pass -1 and Pytorch will automaticaaly select the best shape\n",
     "x=torch.rand(18)\n",
     "y=x.view(-1,9)\n",
+    "print(y)\n",
+    "print(\"\")\n",
+    "\n",
+    "batch=16\n",
+    "x=torch.rand(batch,10,20)\n",
+    "y=x.view(batch,-1)\n",
+    "print(y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.9965, 0.0650, 0.0797, 0.5257, 0.3935, 0.0216])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Flattiing a tensor\n",
+    "x=torch.rand(2,3)\n",
+    "y=x.view(-1)\n",
     "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([64, 10, 25])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# permut is used to change the order of the dimensions such as transpose operation in matrix\n",
+    "batch=64\n",
+    "samples=10\n",
+    "features=25\n",
+    "x=torch.rand(batch,features,samples)\n",
+    "y=x.permute(0,2,1) # 0 is the batch index, 2 is the samples, and 1 is the features\n",
+    "print(y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([15])\n",
+      "\n",
+      "torch.Size([1, 15])\n",
+      "\n",
+      "torch.Size([1, 1, 15])\n",
+      "\n",
+      "torch.Size([1, 1, 15, 1])\n",
+      "\n",
+      "torch.Size([1, 15, 1])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  Add dimension to a tensor \n",
+    "\n",
+    "'''\n",
+    "x = [1, 2, 3]\n",
+    "{x = [1, 2, 3] >>>> >>> x=x.unsqueeze(0) >>>> >>>> x = [[1, 2, 3]]}\n",
+    "{x = [1, 2, 3] >>>> >>> x=x.unsqueeze(1) >>>> >>>> x = x = [[1],[2],[3]]}\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "\n",
+    "x=torch.arange(15)\n",
+    "print(x.shape)\n",
+    "print(\"\")\n",
+    "\n",
+    "x=x.unsqueeze(0) # add a dimension at the beginning  \n",
+    "print(x.shape)\n",
+    "print(\"\")\n",
+    "\n",
+    "# Add anotehr dimension at the middle\n",
+    "x=x.unsqueeze(1) \n",
+    "print(x.shape)\n",
+    "print(\"\")\n",
+    "\n",
+    "\n",
+    "# Add anotehr dimension at the end\n",
+    "x=x.unsqueeze(-1) \n",
+    "print(x.shape)\n",
+    "print(\"\")\n",
+    "\n",
+    "\n",
+    "# Eliminate the first dimension from the beginning\n",
+    "x=x.squeeze(1) \n",
+    "print(x.shape)\n",
+    "print(\"\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([8, 6])\n",
+      "torch.Size([4, 12])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Concatinating two tensors\n",
+    "x1=torch.rand(4,6)\n",
+    "x2=torch.rand(4,6)\n",
+    "print(torch.cat((x1,x2),dim=0).shape) # Concatinate along the rows)    \n",
+    "print(torch.cat((x1,x2),dim=1).shape) # Concatinate along the columns)    "
    ]
   },
   {
@@ -1163,7 +1511,7 @@
     "    print(f'The total number of availabe GPUs are: {torch.cuda.device_count()}')\n",
     "\n",
     "for i in range(torch.cuda.device_count()):\n",
-    "    device=torch.cuda.get_device_properties(i)\n",
+    "    device=torch.cuda.get_device_properties(i))\n",
     "    print(f'\\nDetails from the GPU {i}')\n",
     "    print(f'Name : {device.name}')\n",
     "    print(f'Compute cabability: {device.major}.{device.minor}')\n",
