--- a/16- Save and Load Model/16- Save and Load Model.ipynb
+++ b/16- Save and Load Model/16- Save and Load Model.ipynb
@@ -4,28 +4,365 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Save and Load Pytorch Model</h1>\n",
+    "<h1>Save and Load PyTorch Models</h1>\n",
     "\n",
-    "<h3 style=\"color: yellow;\">Saving the model can be achieved in two ways: (a) by saving the entire model (<span style=\"color: red;\">torch.save(model, 'model.pth')</span>), or (b) by saving only the model parameters, which is the recommended method (<span style=\"color: red;\">torch.save(model.state_dict(), 'model_weights.pth')</span>).</h3>\n",
+    "<h3 style=\"color: yellow;\">There are two ways to save the model: (a) saving the entire model with <span style=\"color: red;\">torch.save(model, 'model.pth')</span> or (b) saving only the model parameters, which is the preferred method, using <span style=\"color: red;\">torch.save(model.state_dict(), 'model_weights.pth')</span>.</h3>\n",
     "\n",
-    "<h3 style=\"color: yellow;\">In addition to the model parameters, we can also save attributes such as epochs, loss, optimizer states, and more.</h3>\n"
+    "<h3 style=\"color: yellow;\">Beyond just the model parameters, it's possible to save attributes such as the number of epochs, loss values, optimizer states, and more.</h3>\n",
+    "\n",
+    "<h3 style=\"color: yellow;\">There are three primary methods to keep in mind: (a) <span style=\"color: red;\">torch.save(arg, PATH)</span>, (b) <span style=\"color: red;\">torch.load(PATH)</span>, and (c) <span style=\"color: red;\">model.load_state_dict(arg)</span>.</h3>\n",
+    "\n",
+    "<h3 style=\"color: yellow;\"><span style=\"color: red;\">torch.save(arg, PATH)</span> can use tensors, models, or dictionaries as parameters for saving. It employs the Python Pickle module to serialize and save objects.</h3>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "data": {
+      "text/plain": [
+       "DummyModel(\n",
+       "  (linear): Linear(in_features=3, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class Model(nn.Module):\n",
+    "    def __init__(self,n_feat, *args, **kwargs):\n",
+    "        super(Model,self).__init__(*args, **kwargs)\n",
+    "        self.n_feat=n_feat\n",
+    "        self.linear=nn.Linear(n_feat,1)\n",
+    "    def forward(self,x):\n",
+    "        x=torch.sigmoid(self.linear(x))\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "# Lazy method for saving and loading model\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class DummyModel(nn.Module):\n",
+    "    def __init__(self, n_input_features, *args, **kwargs):\n",
+    "        super(DummyModel, self).__init__()\n",
+    "        self.linear=nn.Linear(n_input_features,1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x=torch.sigmoid(self.linear(x))\n",
+    "        return x\n",
+    "\n",
+    "model = DummyModel(3)\n",
+    "\n",
+    "torch.save(model,'lazy_model.pth')\n",
+    "model=torch.load('lazy_model.pth')\n",
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/lib/python3/dist-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: '/usr/lib/python3/dist-packages/torchvision/image.so: undefined symbol: _ZN3c104cuda9SetDeviceEi'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
-      "  warn(\n"
+      "Parameter containing:\n",
+      "tensor([[-0.4445,  0.0294, -0.0880]], requires_grad=True)\n",
+      "Parameter containing:\n",
+      "tensor([0.2566], requires_grad=True)\n"
      ]
     }
    ],
    "source": [
+    "for parm in model.parameters():\n",
+    "    print(parm)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter containing:\n",
+      "tensor([[0.0770, 0.5616, 0.5434]], requires_grad=True)\n",
+      "Parameter containing:\n",
+      "tensor([-0.5496], requires_grad=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DummyModel1(\n",
+       "  (liner): Linear(in_features=3, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The recommended method for saving and loading model by using \"state_dict\"\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class DummyModel1(nn.Module):\n",
+    "    def __init__(self,n_input_features):\n",
+    "        super(DummyModel1, self).__init__()\n",
+    "        self.liner=nn.Linear(n_input_features,1)\n",
+    "    def forward(self, x):\n",
+    "        x=torch.sigmoid(self.linear(x))\n",
+    "        return x\n",
+    "    \n",
+    "# Saving the model\n",
+    "model = DummyModel1(3)\n",
+    "for param in model.parameters():\n",
+    "    print(param)\n",
+    "    \n",
+    "torch.save(model.state_dict(), 'modle.pth')        \n",
+    "torch.save(model.state_dict(), 'model_state_dict.pth')\n",
+    "\n",
+    "# Loading the model\n",
+    "model.load_state_dict(torch.load('model_state_dict.pth'))\n",
+    "model.eval()  # It's a good practice to call eval() after loading to set dropout and batch normalization layers to evaluation mode.\n",
+    "# During training, BatchNorm uses the batch's mean and variance. However, during inference, it uses the moving average of the mean and variance, which was computed during training\n",
+    "# During inference (or evaluation), we want to utilize the full network without dropping any units, so dropout is turned off.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter containing:\n",
+      "tensor([[0.0770, 0.5616, 0.5434]], requires_grad=True)\n",
+      "Parameter containing:\n",
+      "tensor([-0.5496], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We loaded the parameters of the same model architecture into a new model instance.\n",
+    "for param in model.parameters():\n",
+    "    print(param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('liner.weight', tensor([[ 0.3238, -0.1527, -0.4669]])), ('liner.bias', tensor([-0.3910]))])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print state_dict\n",
+    "print(model.state_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter containing:\n",
+      "tensor([[-0.3572, -0.3858, -0.0631]], requires_grad=True)\n",
+      "Parameter containing:\n",
+      "tensor([-0.4825], requires_grad=True)\n",
+      "\n",
+      "{'state': {}, 'param_groups': [{'lr': 0.01, 'momentum': 0, 'dampening': 0, 'weight_decay': 0, 'nesterov': False, 'maximize': False, 'foreach': None, 'differentiable': False, 'params': [0, 1]}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Saving the checkpoint during training\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class DummyModel1(nn.Module):\n",
+    "    def __init__(self,n_input_features):\n",
+    "        super(DummyModel1, self).__init__()\n",
+    "        self.liner=nn.Linear(n_input_features,1)\n",
+    "    def forward(self, x):\n",
+    "        x=torch.sigmoid(self.linear(x))\n",
+    "        return x\n",
+    "    \n",
+    "# Saving the model\n",
+    "model = DummyModel1(3)\n",
+    "LR=0.01\n",
+    "optimizer=torch.optim.SGD(model.parameters(),lr=LR)\n",
+    "\n",
+    "for param in model.parameters():\n",
+    "    print(param)\n",
+    "\n",
+    "print('')\n",
+    "print(optimizer.state_dict())   # We will notice her that the optimizer has its own state_dict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# During the training process we can save the checkpoint at a certain epoch\n",
+    "checkpoint={\n",
+    "    'epoch':60,\n",
+    "    'model_state':model.state_dict(),\n",
+    "    'optim_state':optimizer.state_dict()    \n",
+    "}\n",
+    "torch.save(checkpoint,'checkpoint.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the checkpoint\n",
+    "loaded_checkpoint=torch.load('checkpoint.pth')\n",
+    "epoch=loaded_checkpoint['epoch']\n",
+    "epoch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('liner.weight', tensor([[-0.0370,  0.1912,  0.5491]])), ('liner.bias', tensor([-0.5027]))])\n",
+      "{'state': {}, 'param_groups': [{'lr': 0.01, 'momentum': 0, 'dampening': 0, 'weight_decay': 0, 'nesterov': False, 'maximize': False, 'foreach': None, 'differentiable': False, 'params': [0, 1]}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What if we want to continue the training process from the checkpoint?\n",
+    "\n",
+    "model=DummyModel1(n_input_features=3)\n",
+    "optimizer=torch.optim.SGD(model.parameters(),lr=0) # LR is zero because we will load the optimizer state from the checkpoint to continue the training process\n",
+    "model.load_state_dict(loaded_checkpoint['model_state'])\n",
+    "optimizer.load_state_dict(loaded_checkpoint['optim_state'])\n",
+    "\n",
+    "print(model.state_dict())\n",
+    "print(optimizer.state_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# If the training and saving processes were completed on a CPU, we can use the aforementioned implementation.\n",
+    "# If the training was done on a GPU and we want to load on a CPU, we should proceed as follows:\n",
+    "\n",
+    "device=torch.device('cuda')\n",
+    "model.to(device)\n",
+    "torch.save(model.state_dict(),'model.pth')\n",
+    "\n",
+    "#loading ...\n",
+    "\n",
+    "device=torch.device('cpu')\n",
+    "model=DummyModel1(n_input_features=3)\n",
+    "model.load_state_dict(torch.load('model.pth',map_location=device))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If the training has completed on GPU, and want to load in a GPU, we follow:\n",
+    "device=torch.device('cuda')\n",
+    "model.to(device)\n",
+    "torch.save(model.state_dict(),'model.pth')\n",
+    "\n",
+    "# Loading ...\n",
+    "\n",
+    "model=DummyModel1(n_input_features=3)\n",
+    "model.load_state_dict(torch.load('model.pth'))\n",
+    "model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If the training has completed on CPU, and want to load in a GPU, we follow:\n",
+    "torch.save(model.state_dict(),'model.pth')\n",
+    "\n",
+    "device=torch.device('cuda')\n",
+    "model=DummyModel(n_input_features=3)\n",
+    "model.load(torch.load('model.pth',map_location=device))\n",
+    "model.to(device)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save and load model during training\n",
     "import torch \n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
@@ -38,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,14 +405,12 @@
     "        out=self.max_pool(F.relu(self.conv2(out)))\n",
     "        out=out.reshape(out.shape[0],-1)\n",
     "        out=self.fc(out)\n",
-    "        return out\n",
-    "\n",
-    "        "
+    "        return out   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,12 +419,12 @@
     "NUM_CLASSES=10\n",
     "LR=0.001\n",
     "BATCH_SIZE=128\n",
-    "EPOCHS=5"
+    "EPOCHS=5\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,6 +434,28 @@
     "test_dataset=MNIST(root='dataset/',train=False,transform=transforms.ToTensor(),download=True)\n",
     "train_loader=DataLoader(dataset=train_dataset,batch_size=BATCH_SIZE,shuffle=True)\n",
     "test_loader=DataLoader(dataset=test_dataset,batch_size=BATCH_SIZE,shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 28, 28])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iter_=iter(train_loader)\n",
+    "images,labels=next(iter_)\n",
+    "images  [0].shape"
    ]
   },
   {
@@ -260,12 +617,15 @@
     "    print('Saving checkpoint')\n",
     "    torch.save(state,file_path)\n",
     "\n",
+    "\n",
+    "checkpoint={'model_state': model.state_dict(),'optimizer_state':optimizer.state_dict()}\n",
+    "\n",
+    "\n",
+    "\n",
     "for epoch in range(EPOCHS):\n",
     "    checkpoint={'state_dict':model.state_dict(),'optimizer':optimizer.state_dict()}\n",
     "    if epoch%2==0:  # Save every two epochs\n",
     "        save_checkpoint(checkpoint)\n",
-    "        \n",
-    "        \n",
     "        \n",
     "    for i, (data,labels) in enumerate(train_loader):\n",
     "        data=data.to(device)\n",
@@ -333,10 +693,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Return the checkpoint with the minimal loss\n",
+    "\n",
+    "def save_checkpoint(state, file_path='my_checkpoint.pth.tar'):\n",
+    "    print('Saving checkpoint')\n",
+    "    torch.save(state, file_path)\n",
+    "\n",
+    "min_loss = float('inf')  # Initialize with a large value. When you pass 'inf' to float(), it gives you the floating-point representation of positive infinity.\n",
+    "\n",
+    "for epoch in range(EPOCHS):\n",
+    "    losses = []  # List to store batch-wise losses for an epoch\n",
+    "    \n",
+    "    for i, (data, labels) in enumerate(train_loader):\n",
+    "        data = data.to(device)\n",
+    "        labels = labels.to(device)\n",
+    "        predictions = model(data)\n",
+    "        \n",
+    "        loss_ = loss(predictions, labels)\n",
+    "        losses.append(loss_.item())  # Store the batch-wise loss\n",
+    "    \n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        loss_.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        if i % 20 == 0:\n",
+    "            print(f'{epoch}/{EPOCHS} | step: {i}/{len(train_loader)} | loss: {loss_.item():.4f}')\n",
+    "    \n",
+    "    epoch_loss = sum(losses) / len(losses)  # Average loss for the epoch\n",
+    "    \n",
+    "    \n",
+    "    # Save the model with the minimal loss every two epochs\n",
+    "    if epoch % 2 == 0 and epoch_loss < min_loss:\n",
+    "        min_loss = epoch_loss\n",
+    "        checkpoint = {\n",
+    "            'state_dict': model.state_dict(),\n",
+    "            'optimizer': optimizer.state_dict()\n",
+    "        }\n",
+    "        save_checkpoint(checkpoint)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Loading the saved checkpoint .....</h1>\n"
+    "<h1> Saving and Loading the saved checkpoint .....</h1>\n"
    ]
   },
   {
@@ -495,7 +901,8 @@
     "def load_checkpoint(checkpoint):\n",
     "    print('Loading checkpoint..')\n",
     "    model.load_state_dict(checkpoint['state_dict'])\n",
-    "    optimizer.load_state_dict(checkpoint['optimizer'])\n",
+    "    optimizer.load_state_dict(checkpoint['optimizer'])    \n",
+    "\n",
     "    \n",
     "if load_model:\n",
     "    load_checkpoint(torch.load('my_checkpoint.pth.tar'))    \n",
